lägger till logo

--- a/index.html
+++ b/index.html
@@ -200,7 +200,10 @@
             filter: blur(5px);
         }
 
-
+        .logo-container {
+            text-align: center;
+            margin-top: 20px;
+        }
 
         .search-container {
             position: fixed;
@@ -860,6 +863,10 @@
 
     <div class="background-container"></div>
 
+    <!-- Logotyp Container -->
+    <div class="logo-container" style="text-align: center; margin-top: 20px;">
+        <img src="path/to/your/logo.png" alt="Logotyp" style="max-width: 100%; height: auto;">
+    </div>
 
     <div class="search-container">
         <!-- Ny slider här 
