--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
 
     <!-- Logotyp Container -->
     <div class="logo-container" style="text-align: center; margin-top: 20px;">
-        <img src="/images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" style="max-width: 100%; height: auto;">
+        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" style="max-width: 100%; height: auto;">
     </div>
 
     <div class="search-container">
