--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
 
     <!-- Logotyp Container -->
     <div class="logo-container" style="text-align: center; margin-top: 20px;">
-        <img src="path/to/your/logo.png" alt="Logotyp" class="logo-image">
+        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" class="logo-image">
 
     </div>
 
