byter logo till ikon uppe till vänster, white no background

--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
     </nav>
 
     <a href="index.html" class="logo-link">
-        <img src="images/testlogga2.png" alt="Logga" />
+        <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
     </a>
 
     <div class="background-container"></div>
