--- a/tipsaoss.html
+++ b/tipsaoss.html
@@ -12,7 +12,7 @@
         html {
             height: 100%;
             margin: 0;
-            font-family: 'Indie Flower', cursive;
+            font-family: 'Exo 2', cursive;
             color: white;
             /* Vit text */
             background-color: black;
@@ -25,7 +25,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('/tallriken/images/matbakgrund1.jpeg');
+            background-image: url('/tallriken/images/bluebackground.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
