--- a/tipsaoss.html
+++ b/tipsaoss.html
@@ -132,8 +132,11 @@
     </div>
 
     <div class="footer-banner">
-        <a href="omoss.html">Om Oss</a>
-        <a href="tipsaoss.html">Tipsa Oss</a>
+        <p class="copyright">&copy; 2023. All rights reserved.</p>
+        <div class="footer-links">
+            <a href="omoss.html">Om</a>
+            <a href="tipsaoss.html">Tipsa</a>
+        </div>
     </div>
 </body>
 
