--- a/omoss.html
+++ b/omoss.html
@@ -86,7 +86,7 @@
 
 <body>
     <a href="index.html" class="logo-link">
-        <img src="images/testlogga.png" alt="Logga">
+        <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga">
     </a>
 
     <div class="background-container"></div>
