--- a/index.html
+++ b/index.html
@@ -755,6 +755,12 @@
 
         }
 
+        .current-page {
+            background-color: rgb(90, 118, 84);
+            color: white;
+        }
+
+
         /* Stil för placeholder-texten */
         #searchInput::placeholder {
             font-family: 'Exo 2', cursive;
