--- a/index.html
+++ b/index.html
@@ -756,9 +756,10 @@
         }
 
         .current-page {
-            background-color: rgb(90, 118, 84);
-            color: white;
+            background-color: rgb(90, 118, 84) !important;
+            color: white !important;
         }
+
 
 
         /* Stil för placeholder-texten */
