--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             width: 15px;
             height: 10px;
             margin: 40px;
-            color: rgb(255, 230, 0);
+            color: rgb(255, 247, 179);
         }
 
         .nav__trigger-finger::before {
@@ -119,7 +119,7 @@
             bottom: 0;
             right: 0;
             z-index: 3100;
-            background: rgb(255, 230, 0);
+            background: rgb(255, 247, 179);
             font-size: 4rem;
             padding: 40px;
             transform: translateX(100%);
@@ -756,8 +756,8 @@
         }
 
         .current-page {
-            background-color: rgb(90, 118, 84) !important;
-            color: white !important;
+            background-color: rgb(255, 247, 179) !important;
+            color: black !important;
         }
 
 
