--- a/index.html
+++ b/index.html
@@ -729,12 +729,15 @@
             }
 
             .search-container {
-                top: 20%;
+                top: 130px;
                 /* Öka detta värde för att flytta ner sökfältet så att loggan syns */
                 width: 90%;
                 /* Anpassa bredden om så önskas */
-                transform: translate(-50%, -50%);
+                transform: translateX(-50%);
+                margin-top: 20px;
+                /* Justera toppmarginalen för att flytta ner hela sökcontainern */
             }
+
 
             #data-container.initial {
                 margin-top: 20px;
