--- a/index.html
+++ b/index.html
@@ -744,6 +744,7 @@
                 /* Minska detta värde för att minska utrymmet mellan sökfält och resultat */
             }
 
+
             .input-button-container input[type='text'],
             .input-button-container button {
                 padding: 10px;
@@ -776,6 +777,11 @@
             }
 
             /* Behåll andra befintliga stilar som du inte vill ändra */
+
+            #data-container {
+                margin-top: 120px;
+                /* Öka detta värde för att skapa utrymme mellan sökfältet och sökresultaten */
+            }
         }
 
 
