--- a/index.html
+++ b/index.html
@@ -524,12 +524,12 @@
         }
 
         input:checked+.slider {
-            background-color: #03ba11;
+            background-color: rgba(255, 255, 255, 0.8);
             /* Färg när omkopplaren är på */
         }
 
         input:focus+.slider {
-            box-shadow: 0 0 1px #03ba11;
+            box-shadow: 0 0 1px rgba(255, 255, 255, 0.8);
         }
 
         input:checked+.slider:before {
@@ -779,7 +779,7 @@
             /* Behåll andra befintliga stilar som du inte vill ändra */
 
             #data-container {
-                margin-top: 220px;
+                margin-top: 450px;
                 /* Öka detta värde för att skapa utrymme mellan sökfältet och sökresultaten */
             }
         }
