--- a/index.html
+++ b/index.html
@@ -524,12 +524,12 @@
         }
 
         input:checked+.slider {
-            background-color: rgba(255, 255, 255, 0.8);
+            background-color: rgb(255, 247, 179);
             /* Färg när omkopplaren är på */
         }
 
         input:focus+.slider {
-            box-shadow: 0 0 1px rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 1px rgb(255, 247, 179);
         }
 
         input:checked+.slider:before {
@@ -740,8 +740,13 @@
 
 
             #data-container.initial {
-                margin-top: 20px;
+                margin-top: 220px;
                 /* Minska detta värde för att minska utrymmet mellan sökfält och resultat */
+            }
+
+            #data-container {
+                margin-top: 220px;
+                /* Öka detta värde för att skapa utrymme mellan sökfältet och sökresultaten */
             }
 
 
@@ -778,10 +783,7 @@
 
             /* Behåll andra befintliga stilar som du inte vill ändra */
 
-            #data-container {
-                margin-top: 450px;
-                /* Öka detta värde för att skapa utrymme mellan sökfältet och sökresultaten */
-            }
+            
         }
 
 
