gör så att sökfältet rör sig med sidan, tar bort fixed

--- a/index.html
+++ b/index.html
@@ -209,17 +209,17 @@
 
 
         .search-container {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            /* position: fixed; */
+            top: unset;
+            left: unset;
+            transform: unset;
             display: flex;
             flex-direction: column;
             align-items: center;
             z-index: 1000;
             width: 40%;
             /* Ökar bredden av sökfältet */
-            transition: opacity 0.5s ease;
+            /* transition: opacity 0.5s ease; */
             /* Lägg till denna rad */
         }
 
