--- a/index.html
+++ b/index.html
@@ -209,20 +209,18 @@
 
 
         .search-container {
-            position: fixed;
-            /* Sökfältet stannar på samma plats på skärmen */
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             display: flex;
             flex-direction: column;
             align-items: center;
             z-index: 1000;
             width: 40%;
-            /* Justera bredden efter din design */
-            transition: opacity 0.5s ease;
-            /* Andra stilar efter behov */
+            /* Anpassa bredden efter designen */
+            margin: 20px auto;
+            /* Centrerar kontainern med marginal upp- och nertill */
+            padding-top: 20px;
+            /* Lägg till lite utrymme ovanför sökfältet */
         }
+        
 
 
         .slider-button-container {
@@ -943,7 +941,7 @@
 
         <!-- Sökfält och knappar -->
         <div class="input-button-container">
-            <input type="text" id="searchInput" placeholder="En/flera ingredienser o tryck Enter...">
+            <input type="text" id="searchInput" placeholder="Skriv ingredienser o tryck Enter...">
             <button onclick="addTagFromButton()" class="add-button">
                 <img src="images/knifeforksign.jpg
                 " alt="Add" />
