--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         }
 
         #data-container.initial {
-            margin-top: 400px;
+            margin-top: 100px;
             /* Anpassa detta värde så att det passar layouten av din sökcontainer */
         }
 
@@ -281,7 +281,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin-top: 5px;
+            margin-top: 2%;
             padding-bottom: 20px;
             overflow: auto;
             z-index: 1500;
