--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 <body>
 
     <!-- Loader HTML -->
-    <div class="blocks" id="loader" hidden>
-        <div class="block orange"></div>
-        <div class="block blue"></div>
+    <div id="loader" hidden>
+        <div class="blocks">
+            <div class="block orange"></div>
+            <div class="block blue"></div>
+        </div>
     </div>
+
 
     <nav class="nav">
         <input class="nav__trigger-input" type="checkbox" id="trigger" aria-label="open the navigation" />
