--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 <body>
 
     <!-- Loader HTML -->
-    <div id="loader" hidden>
-        <div class="blocks">
-            <div class="block orange"></div>
-            <div class="block blue"></div>
-        </div>
+    <div class="blocks" id="loader" hidden>
+        <div class="block orange"></div>
+        <div class="block blue"></div>
     </div>
+
 
 
     <nav class="nav">
